# titan

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Readme.md  design.md  grammar.md
.old/checks/: README.md
.old/checks/semantic_failures/: 1100_duplicate_function.tl  1101_duplicate_variable.tl  1103_return_expected_expr.tl  1107_param_size_mismatch.tl  1108_param_type_mismatch.tl  1109_incorrect_entry_return.tl  1110_invalid_expr.tl  1111_cast_fail.tl  1113_duplicate_parameters.tl  run.py
.old/checks/semantic_passes/: arrays.tl  basic_checks.tl  if_statements.tl  run.py
.old/docs/: errors.hpp
.old/docs/scratch_code/: types.tl
.old/scripts/: install_cpputest.sh
.old/src/: CMakeLists.txt  app.hpp  main.cpp
.old/src/alert/: alert.cpp  alert.hpp
.old/src/compiler/: analyzer.hpp  lexer.cpp  parser.cpp  parser.hpp  parsetree.cpp  symbols.cpp  tokens.hpp
.old/src/error/: error_list.hpp  error_manager.cpp
.old/src/tests/: lexer_tests.cpp  parser_tests.cpp  vm_memory_tests.cpp
apps/: CMakeLists.txt
apps/vcli/: CMakeLists.txt
checks/semantic_failures/: 1100_duplicate_function.tl  1101_duplicate_variable.tl  1102_no_entry.tl  1103_return_expected_expr.tl  1104_unknown_id.tl  1107_param_size_mismatch.tl  1108_param_type_mismatch.tl  1110_invalid_expr.tl  1111_cast_fail.tl  1111_depth_mismatch.tl  1112_invalid_arr_idx.tl  1113_duplicate_parameters.tl  run.py
checks/semantic_passes/: arrays.tl  basic_checks.tl  expr_ops.tl  for.tl  if_statements.tl  parameters_used.tl  run.py  while.tl
doc/: v-titan.md
docs/: errors.hpp  errors.md  grammar.md  types.md  typs.hpp
docs/scratch_code/: scratch1.tl
lib/: CMakeLists.txt  settings.hpp.in
lib/include/vtitan/: settings.hpp
lib/targets/standard/: About.md  Target.cmake  settings.cpp
src/: CMakeLists.txt  app.hpp  cfg.hpp  design.md  env.hpp  imports.hpp  instructions.cpp  instructions.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  titan.cpp  titan.hpp  tokens.hpp
src/alert/: alert.cpp  alert.hpp
src/analyze/: analyzer.cpp  analyzer.hpp  symbols.cpp  symbols.hpp
src/built_in/: puts.hpp
src/compiler/: analyzer.cpp  analyzer.hpp  common.hpp  imports.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  parsetree.cpp  parsetree.hpp  symbols.cpp  symbols.hpp  tokens.hpp
src/error/: error.cpp  error.hpp  error_list.hpp  error_manager.cpp  error_manager.hpp
src/exec/: env.cpp  env.hpp  exec.cpp  exec.hpp  memory.cpp  memory.hpp  space.cpp  space.hpp
src/lang/: instructions.cpp  instructions.hpp  parser.cpp  parser.hpp
src/log/: log.hpp
src/test_code/: basic.tl  basic.vt  error_display.tl  expr.tl  for_stmt.tl  if_stmt.tl  import.tl  return_stmt.tl  return_stmt_with_call.tl  while_stmt.tl
src/test_code/semantic/: error_bad_assign.tl  error_dup_assign.tl  error_duplicate_fn.tl  error_entry_return.tl  error_no_main.tl
src/tests/: CMakeLists.txt  exec_memory_tests.cpp  generator.hpp  lexer_tests.cpp  main.cpp  parser_tests.cpp  symbol_table_tests.cpp
src/tests/test_files/: exprs.tl  ifs.tl  lexer_test.txt  parser_assignments.tl  parser_basic_function.tl  reassign.tl
src/tests/test_files/semantic_failures/: incorrect_return.tl  no_entry.tl
src/types/: types.cpp  types.hpp
src/vm/: env.hpp  memory.cpp  memory.hpp  settings.hpp  space.cpp  space.hpp  vm.hpp
src/vm/data/: types.hpp
(+10 files in other folders)
